--- a/Prob09.html
+++ b/Prob09.html
@@ -18,11 +18,21 @@
         <input type="text" class="form-control" id="outputString" readonly>
     </div>
     <button id="extractBtn" type="button" class="btn btn-primary">문자열 추출(substring)</button>
+    <button id="resetBtn" type="button" class="btn btn-primary">대문자변환</button>
+    <button id="resetBtn" type="button" class="btn btn-primary">문자열길이</button>
+    <button id="resetBtn" type="button" class="btn btn-primary">문자열 공백제거</button>
+    <button id="resetBtn" type="button" class="btn btn-primary">문자열 합치기</button>
+    <button id="resetBtn" type="button" class="btn btn-primary">Reset</button>
 
     <script>
       const inputField = document.getElementById("inputString");
       const outputField = document.getElementById("outputString");
       const extractBtn = document.getElementById("extractBtn");
+      // TODO
+      // 대문자 변환 변수
+      // 문자열 길이 변수
+      // 문자열 공백제거 변수
+      // 문자열 합치기 변수
       const resetBtn = document.getElementById("resetBtn");
 
       extractBtn.addEventListener("click", function() {
@@ -31,6 +41,11 @@
           const month = inputValue.substring(4, 6);
           const day = inputValue.substring(6, 8);
           outputField.value = `${year}년 ${month}월 ${day}일`;
+      });
+
+      resetBtn.addEventListener("click", function() {
+        inputField.value = "";
+        outputField.value = "";
       });
 
     </script>
